--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 {% block content %}
+
+<p>Hello you are on the {{page}} page</p>
 <h1>Projects Templates</h1>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
