--- a/templates/projects.html
+++ b/templates/projects.html
@@ -16,7 +16,7 @@
 
 <ul>
       {% for project in projects %}
-        <li>Title:{{project.title}}</li>
+        <li>Title:<a href="{% url 'project' project.id %}">{{project.title}}</a>----{{project.description}}</li>
       {% endfor %}
 </ul>
 
